--- a/package.json
+++ b/package.json
@@ -1,17 +1,6 @@
 {
   "name": "psu-tier-list",
-  "version": "1",
-  "description": "Power supplies curated by Cultists",
-  "homepage": "https://github.com/hanggrian/psu-tier-list",
-  "bugs": {
-    "url": "https://github.com/hanggrian/psu-tier-list/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hanggrian/psu-tier-list.git"
-  },
-  "license": "Apache-2.0",
-  "author": "Hendra Anggrian <hanggrian@proton.me>",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -23,17 +12,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "jsdom": "^26.0.0",
     "lucide-react": "^0.562.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "typescript": "~5.7.2",
-    "vite": "^6.3.4"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.25.1",
     "@tailwindcss/vite": "^4.1.18",
     "@testing-library/dom": "^10.4.0",
@@ -53,8 +36,11 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
+    "jsdom": "^26.0.0",
     "sinon": "^21.0.1",
+    "typescript": "~5.7.2",
     "typescript-eslint": "^8.31.1",
+    "vite": "^6.3.4",
     "vitest": "^3.0.8",
     "vitest-dom": "^0.1.1"
   }
